add autoload to composer.json

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
             "homepage": "http://www.beyondit.at",
             "role": "Developer"
         }
-    ]
+    ],
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
+    },
 }
