--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: php
+env:
+ - OC_ROOT=/home/travis/build/beyondit/opencart-test-suite/www/
 php:
   - "5.4"
 install:
@@ -7,4 +9,5 @@ before_script:
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('root') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
 script:
   - bin/robo travis:opencart-setup
-  - bin/phpunit
+  - bin/phpunit --testsuite catalog-tests
+  - bin/phpunit --testsuite admin-tests
