--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
 before_script:
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('root') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
 script:
-  - bin/robo travis:opencart-setup
+  - bin/robo opencart:setup
   - bin/phpunit --testsuite catalog-tests
   - bin/phpunit --testsuite admin-tests
