--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Testing Suite for OpenCart Development",
     "require": {
         "phpunit/phpunit": "4.*" ,
-        "beyondit/opencart-extension-installer": "*"
+        "beyondit/opencart-extension-installer": "~2.3.0"
     },
     "license": "GPL-3.0",
     "authors": [
