--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: php
 env:
-  - OC_ROOT=/home/travis/build/beyondit/opencart-test-suite/www/
+  - OC_ROOT=/home/travis/build/vitormattos/opencart-test-suite/www/
+  - HTTP_SERVER=http://localhost:8080/
+  - TEST_CONFIG=test-config
 php:
   - "5.5"
   - "7"
