--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "require-dev" : {
         "opencart/opencart" : "3.0.1.1",
         "consolidation/robo" : "^1.1",
-        "vlucas/phpdotenv" : "^2.4"
+        "vlucas/phpdotenv" : "^2.4",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload" : {
         "files" : [
